# any2md

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  STATE.md  pyproject.toml  skills-lock.json
.agents/skills/prompt-engineering/references/: analysis.md  meta_prompt.md  techniques.md
.claude/skills/prompt-engineering/: SKILL.md
.claude/skills/prompt-engineering/examples/: agent_prompts.md
.claude/skills/prompt-engineering/references/: evaluation.md  frameworks.md
docs/: databricks.md
docs/superpowers/specs/2026-05-21-databricks-converter/: 01-goals-and-scope.md  02-platform.md  03-architecture.md  04-api-surface.md  05-ir-spec.md  06-extractors.md  07-agent.md  08-errors-and-observability.md  09-testing.md  10-open-questions.md  11-schema-and-rules.md  README.md
docs/superpowers/specs/2026-05-26-databricks-compat-and-agent-rewrite/: design.md
samples/: logic_tree_lending.docx  logic_tree_lending.pptx  logic_tree_lending.xlsx  test.html
samples/_ir/: AUDIT.md
samples/_md/: Naac_appLetter.pdf.expected.md  c4611_sample_explain.pdf.expected.md  logic_tree_lending.xlsx.expected.md  test.html.expected.md
samples/_md_actual/: Naac_appLetter.pdf.actual.md  c4611_sample_explain.pdf.actual.md  logic_tree_lending.docx.actual.md  logic_tree_lending.pptx.actual.md  logic_tree_lending.xlsx.actual.md  test.html.actual.md
scripts/: audit_ir.py  chunk_ir.py  clean_ir.py  dump_ir.py  langsmith_mcp.py  run_agent.py
src/any2md/: __init__.py  convert.py  detect.py  ir.py  ir_chunk.py  ir_clean.py  llm.py  options.py  paths.py  pipeline.py
src/any2md/agent/: __init__.py  captions.py  image_refs.py  main_agent.py  postprocess.py  prompts.py  tools.py
src/any2md/extractors/: __init__.py  _image_utils.py  _smartart.py  base.py  docx.py  html.py  markdown.py  pdf.py  pptx.py  xlsx.py
(+3 files in other folders)
