[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "any2md"
version = "0.0.1"
description = "any2md — converts office and web documents (xlsx/docx/pptx/pdf/html/md) into structured markdown. No subprocess, no system binaries; installs from manylinux wheels — runs anywhere Python 3.11+ runs, including Databricks serverless."
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1,<4",
    "python-docx>=1.1,<2",
    "python-pptx>=1.0,<2",
    "pymupdf>=1.24.10,<2",
    "lxml>=5.0,<6",
    "beautifulsoup4>=4.12,<5",
    "markdown-it-py>=3.0,<4",
    "Pillow>=10.0,<12",
]

[project.optional-dependencies]
# Pins match deepagents 0.6.3 (requires langchain-core>=1.4,<2). LC stack moved
# from 0.x to 1.x in late 2025; bumping these caps requires re-testing on a
# Databricks cluster since DBR pins langchain-core to its curated runtime.
agent      = ["langchain-core>=1.4,<2", "deepagents>=0.6,<0.7", "tenacity", "python-dotenv>=1.0"]
databricks = ["databricks-langchain>=0.17,<1"]
openai     = ["langchain-openai>=1.0,<2"]
anthropic  = ["langchain-anthropic>=1.0,<2"]
google     = ["langchain-google-genai>=4,<5"]
# `all` deliberately excludes databricks-langchain — serverless already ships it
all = [
    "langchain-core>=1.4,<2",
    "deepagents>=0.6,<0.7",
    "tenacity",
    "python-dotenv>=1.0",
    "langchain-openai>=1.0,<2",
    "langchain-anthropic>=1.0,<2",
    "langchain-google-genai>=4,<5",
]
dev = ["pytest>=8.0", "pytest-asyncio", "syrupy", "ruff", "mypy", "build"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
